--- a/package.json
+++ b/package.json
@@ -13,7 +13,9 @@
   "dependencies": {
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
+    "md5": "^2.3.0",
     "nodemon": "^2.0.20",
+    "pug": "^3.0.2",
     "sqlite3": "^5.1.2"
   }
 }
