--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "body-parser": "^1.20.1",
     "express": "^4.18.2",
     "md5": "^2.3.0",
+    "multer": "^1.4.5-lts.1",
     "nodemon": "^2.0.20",
     "pug": "^3.0.2",
     "sqlite3": "^5.1.2"
